# foddian-jam

./: Cargo.toml  build_web.sh
.github/workflows/: build.yml
assets/: world.ldtk
source_assets/: player.aseprite  spark.aseprite  tilemap.aseprite
src/: assets.rs  camera.rs  lib.rs  main.rs  particles.rs  player.rs  score.rs  world.rs
