#jinja2: trim_blocks:False
[package]
name = "foddian_jam"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_embedded_assets = "0.8"
bevy_asset_loader = { version = "0.17", features = ["2d"] }
bevy-inspector-egui = { version = "0.19", optional = true }
bevy-debug-text-overlay = { version = "6", default-features = false }

bevy_ecs_ldtk = "0.8"
bevy_rapier2d = { version = "0.22", features = [
    "simd-stable",
    # "enhanced-determinism",
] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = [
    "json",
    "blocking",
], optional = true }
serde = "1.0.181"
serde_json = "1.0.104"


[dependencies.bevy]
version = "0.11"
default-features = false

features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_audio",
    "multi-threaded",
    "animation",
    "x11",
    "wayland",
    # File formats
    "png",
    "wav",
]

[features]
debug = ["dep:bevy-inspector-egui", "bevy-debug-text-overlay/debug"]
dev = ["bevy/dynamic_linking"]

non_web = ["bevy_rapier2d/parallel", "dep:reqwest"]
web = ["bevy_rapier2d/wasm-bindgen", "bevy_ecs_ldtk/atlas", "bevy/webgl2"]

default = ["dev", "non_web"]

# Compile dependencies with optimizations
[profile.dev.package."*"]
opt-level = 3

# Optimize for size when building for release
[profile.release]
lto = "thin"

# Issue with rendering when levels respawn 
[patch.crates-io]
bevy_ecs_tilemap = { git = "http://github.com/StarArawn/bevy_ecs_tilemap", version = "0.11", branch = "main" }
